--- a/task-tracker/docker-compose.yml
+++ b/task-tracker/docker-compose.yml
@@ -13,6 +13,12 @@ services:
       - postgres_data:/var/lib/postgresql/data
       - ./db/init:/docker-entrypoint-initdb.d
 
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready --username=user --dbname=tasktracker"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   main-service:
     build:
       context: .
