--- a/task-tracker/task-service/Dockerfile
+++ b/task-tracker/task-service/Dockerfile
@@ -1,15 +1,14 @@
-# Dockerfile for main-service
+# Dockerfile for task-service
 
 FROM golang:1.22.4 AS builder
 
 WORKDIR /app
 
 COPY go.mod go.sum ./
-COPY task-service ./task-service/
 RUN go mod download
 
 COPY . ./
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags="-w -s" -trimpath -mod=readonly -o /go/bin/app ./cmd/main-service
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags="-w -s" -trimpath -mod=readonly -o /go/bin/app ./cmd/main.go
 
 FROM alpine:latest
 RUN apk --no-cache add ca-certificates
@@ -17,6 +16,5 @@ RUN apk --no-cache add ca-certificates
 WORKDIR /root/
 
 COPY --from=builder /go/bin/app .
-COPY --from=builder /app/.env .env
 
 ENTRYPOINT ["./app"]
